--- a/PokeApp/PokeApp.Android/PokeApp.Android.csproj
+++ b/PokeApp/PokeApp.Android/PokeApp.Android.csproj
@@ -119,5 +119,8 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\PikaPokeball.png" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\PokeballSlider.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
