ajout poke à la liste 1er version

--- a/PokeApp/PokeApp.Android/PokeApp.Android.csproj
+++ b/PokeApp/PokeApp.Android/PokeApp.Android.csproj
@@ -122,5 +122,11 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\PokeballSlider.png" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\poke1.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\poke2.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
