--- a/PokeApp/PokeApp/PokeApp.csproj
+++ b/PokeApp/PokeApp/PokeApp.csproj
@@ -12,6 +12,8 @@
 
   <ItemGroup>
     <PackageReference Include="PokeApiNet" Version="3.0.3" />
+    <PackageReference Include="sqlite-net-pcl" Version="1.8.116" />
+    <PackageReference Include="Xam.Plugin.Media" Version="5.0.1" />
     <PackageReference Include="Xamarin.Forms" Version="5.0.0.2196" />
     <PackageReference Include="Xamarin.Essentials" Version="1.7.0" />
   </ItemGroup>
